
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system
mac getIpByName liefert name von IPnum


##################################################################
opsi-winst/opsi-script (4.12.4.21) stable; urgency=low

 *

-- d.oertel <d.oertel@uib.de> Tue, 11 May 2021 15:00

opsi-winst/opsi-script (4.12.4.20) stable; urgency=low

 * again: fix debug_lib do imported libs added to nologfiles in oslog

-- d.oertel <d.oertel@uib.de> Thu, 6 May 2021 15:00

opsi-winst/opsi-script (4.12.4.19) stable; urgency=low

 * osparser: fix fileexists, fileOrFolderExists, DirectoryExists with quoted filenames

-- d.oertel <d.oertel@uib.de> Wed, 5 May 2021 15:00

opsi-winst/opsi-script (4.12.4.18) stable; urgency=low

 * osfunc: fix for getOSArchitecture at windows 64 bit
 * osparser: doAktionen: executesection: call sections with catchout=true
   fixes: nooutput in log and showoutput
 * osfuncmac: getProfilesDirListMac implemented
 * osmain: allow /batch with /productid and opsi-service parameters

-- d.oertel <d.oertel@uib.de> Wed, 14 Apr 2021 15:00

opsi-winst/opsi-script (4.12.4.17) stable; urgency=low

 * change getFileBom to fileHasBom(<filename>) : boolean

-- d.oertel <d.oertel@uib.de> Wed, 31 Mar 2021 15:00


opsi-winst/opsi-script (4.12.4.16) stable; urgency=low

 * can now handle *.opsiscript files with bom
 * call of execwith section with /encoding parameter (by j.laajili)
 * new string function: getOSarchitecture (x86_32 / x86_64/ arm_64)
 * new boolean function: runningInWAnMode (true if opsiserver = localhost) default=false

-- d.oertel <d.oertel@uib.de> Fri, 26 Feb 2021 15:00

opsi-winst/opsi-script (4.12.4.15) stable; urgency=low

 * new function asConfidentialList(<list>) : stringlist
 * new GUI Interface implementation
 * some additional try excet in osjson and load testfile variants
 * osGUIControl: unify skin directories to 'skin' with fallback to custom\winstskin at windows